@@ -69,6 +69,9 @@ Job::Job(const FaxRequest& req)
 
     dnext = NULL;
     modem = NULL;
+    bprev = NULL;
+    bnext = NULL;
+    breq = NULL;
     suspendPending = false;
     registry[jobid] = this;
 }
@@ -102,6 +105,22 @@ Job::update(const FaxRequest& req)
     resolution = req.resolution;
     willpoll = (req.findItem(FaxRequest::send_poll) != fx_invalidArrayIndex);
     device = req.modem;
+}
+
+/*
+ * Remove a job from a batch of jobs then let parent class do it's job.
+ */
+void
+Job::remove(void)
+{
+    if (bnext != NULL)
+	bnext->bprev = bprev;
+    if (bprev != NULL)
+	bprev->bnext = bnext;
+    bnext = NULL;
+    bprev = NULL;
+    breq = NULL;
+    QLink::remove();
 }
 
 Job*
@@ -189,4 +208,12 @@ Job::encode(fxStackBuffer& buf) const
     buf.put(dest,   dest.length()+1);
     buf.put(device, device.length()+1);
     buf.put(commid, commid.length()+1);
+}
+
+Job*
+Job::bfirst()
+{
+    Job* j = this;
+    for (; j->bprev != NULL; j = j->bprev);
+    return j;
 }
